Tmux fixes, migate from ale in vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,13 +2,12 @@
 unbind C-b
 set -g prefix `
 bind ` send-prefix
-
 setw -g monitor-activity on
-set -g visual-activity on
+set -g visual-activity off
 set -g allow-rename off
-set -g aggressive-resize on
 set -g default-terminal 'tmux-256color'
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+set-option -g history-limit 5000
 
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
@@ -16,13 +15,12 @@ bind % split-window -h -c "#{pane_current_path}"
 #Fix ctrl + any arrow navigation
 set-window-option -g xterm-keys on
 
-set-option -g history-limit 5000
-
 set -g status-interval 60
 setw -g mode-keys vi
-set -sg escape-time 1
 set -g renumber-windows on
 set -g base-index 1
+
+set -g @resurrect-strategy-nvim 'session'
 
 #VIM style movements
 bind -r h select-pane -L
@@ -33,44 +31,41 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
-
 set-option -g default-shell /bin/zsh
 
 set -g @copycat_search_C-i '[[:digit:]]{1,3}\.[[:digit:]]{1,3}\.[[:digit:]]{1,3}\.[[:digit:]]{1,3}'
+set -g @continuum-restore 'on'
+set -g @resurrect-strategy-nvim 'session'
 
 set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @plugin 'jbnicolai/tmux-fpp'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'soyuka/tmux-current-pane-hostname'
+
 run '~/.tmux/plugins/tpm/tpm'
 
 #Theme
-set -g window-style 'fg=colour247,bg=colour236'
-set -g window-active-style 'fg=colour250,bg=black'
-set -g focus-events on
-set -g status-bg "colour233"
-set -g message-command-fg "colour247"
 set -g status-justify "left"
 set -g status-left-length "100"
 set -g status "on"
-set -g pane-active-border-fg "colour148"
-set -g message-bg "colour236"
 set -g status-right-length "100"
-set -g status-right-attr "none"
-set -g message-fg "colour247"
-set -g message-command-bg "colour236"
-set -g status-attr "none"
-#set -g status-utf8 "on"
-set -g pane-border-fg "colour236"
-set -g status-left-attr "none"
-setw -g window-status-fg "colour231"
-setw -g window-status-attr "none"
-setw -g window-status-activity-bg "colour233"
-setw -g window-status-activity-attr "none"
-setw -g window-status-activity-fg "colour148"
 setw -g window-status-separator ""
-setw -g window-status-bg "colour233"
+set -g message-command-style bg=colour236,fg=colour247
+set -g message-style bg=colour236,fg=colour247
+set -g pane-active-border-style fg=colour148
+set -g pane-border-style fg=colour236
+set -g status-style bg=colour233
+set -g window-status-activity-style bg=colour233,fg=colour148
+set -g window-status-style bg=colour233,fg=colour231
+
 set -g status-left "#[fg=colour22,bg=colour148] [#S] #[fg=colour148,bg=colour233,nobold,nounderscore,noitalics]"
 #set -g status-right "#[fg=colour148,bg=colour233,nobold,nounderscore,noitalics]#[fg=colour22,bg=colour148] \"#22T\" %d-%b-%y "
-set -g status-right "#[fg=colour148,bg=colour233,nobold,nounderscore,noitalics]#[fg=colour22,bg=colour148] %H:%M %d-%b-%y "
+set -g status-right '#[fg=colour148,bg=colour233,nobold,nounderscore,noitalics]#[fg=colour22,bg=colour148] %H:%M %d-%b-%y'
 setw -g window-status-format "#[fg=colour233,bg=colour233,nobold,nounderscore,noitalics]#[default] #I:#W#F #[fg=colour233,bg=colour233,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=colour233,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour247,bg=colour236] #I:#W#F #[fg=colour236,bg=colour233,nobold,nounderscore,noitalics]"
