--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,7 @@ set -g allow-rename off
 set -g default-terminal 'tmux-256color'
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 set-option -g history-limit 5000
+set -sg escape-time 0
 
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
@@ -19,6 +20,7 @@ set -g status-interval 60
 setw -g mode-keys vi
 set -g renumber-windows on
 set -g base-index 1
+set -g mouse on
 
 set -g @resurrect-strategy-nvim 'session'
 
@@ -47,25 +49,29 @@ set -g @plugin 'jbnicolai/tmux-fpp'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'soyuka/tmux-current-pane-hostname'
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_window_tabs_enabled on
+set -g @catppuccin_user "off"
+set -g @catppuccin_host "off"
+set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
+set -g @catppuccin_flavour 'mocha'
 
 run '~/.tmux/plugins/tpm/tpm'
-
 #Theme
-set -g status-justify "left"
-set -g status-left-length "100"
-set -g status "on"
-set -g status-right-length "100"
-setw -g window-status-separator ""
-set -g message-command-style bg=colour236,fg=colour247
-set -g message-style bg=colour236,fg=colour247
-set -g pane-active-border-style fg=colour148
-set -g pane-border-style fg=colour236
-set -g status-style bg=colour233
-set -g window-status-activity-style bg=colour233,fg=colour148
-set -g window-status-style bg=colour233,fg=colour231
+# set -g status-justify "left"
+# set -g status-left-length "100"
+# set -g status "on"
+# set -g status-right-length "100"
+# setw -g window-status-separator ""
+# set -g message-command-style bg=colour236,fg=colour247
+# set -g message-style bg=colour236,fg=colour247
+# set -g pane-active-border-style fg=colour148
+# set -g pane-border-style fg=colour236
+# set -g status-style bg=colour233
+# set -g window-status-activity-style bg=colour233,fg=colour148
+# set -g window-status-style bg=colour233,fg=colour231
 
-set -g status-left "#[fg=colour22,bg=colour148] [#S] #[fg=colour148,bg=colour233,nobold,nounderscore,noitalics]"
-#set -g status-right "#[fg=colour148,bg=colour233,nobold,nounderscore,noitalics]#[fg=colour22,bg=colour148] \"#22T\" %d-%b-%y "
-set -g status-right '#[fg=colour148,bg=colour233,nobold,nounderscore,noitalics]#[fg=colour22,bg=colour148] %H:%M %d-%b-%y'
-setw -g window-status-format "#[fg=colour233,bg=colour233,nobold,nounderscore,noitalics]#[default] #I:#W#F #[fg=colour233,bg=colour233,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=colour233,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour247,bg=colour236] #I:#W#F #[fg=colour236,bg=colour233,nobold,nounderscore,noitalics]"
+# set -g status-left "#[fg=colour22,bg=colour148] [#S] #[fg=colour148,bg=colour233,nobold,nounderscore,noitalics]"
+# set -g status-right '#[fg=colour148,bg=colour233,nobold,nounderscore,noitalics]#[fg=colour22,bg=colour148] %H:%M %d-%b-%y'
+# setw -g window-status-format "#[fg=colour233,bg=colour233,nobold,nounderscore,noitalics]#[default] #I:#W#F #[fg=colour233,bg=colour233,nobold,nounderscore,noitalics]"
+# setw -g window-status-current-format "#[fg=colour233,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour247,bg=colour236] #I:#W#F #[fg=colour236,bg=colour233,nobold,nounderscore,noitalics]"
