--- a/tmux.conf
+++ b/tmux.conf
@@ -21,8 +21,7 @@ setw -g mode-keys vi
 set -g renumber-windows on
 set -g base-index 1
 set -g mouse on
-
-set -g @resurrect-strategy-nvim 'session'
+set -g focus-events on
 
 #VIM style movements
 bind -r h select-pane -L
@@ -37,11 +36,10 @@ set-option -g default-shell /bin/zsh
 
 set -g @copycat_search_C-i '[[:digit:]]{1,3}\.[[:digit:]]{1,3}\.[[:digit:]]{1,3}\.[[:digit:]]{1,3}'
 set -g @continuum-restore 'on'
-set -g @resurrect-strategy-nvim 'session'
 
 set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 # set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-urlview'
@@ -57,21 +55,3 @@ set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
 set -g @catppuccin_flavour 'mocha'
 
 run '~/.tmux/plugins/tpm/tpm'
-#Theme
-# set -g status-justify "left"
-# set -g status-left-length "100"
-# set -g status "on"
-# set -g status-right-length "100"
-# setw -g window-status-separator ""
-# set -g message-command-style bg=colour236,fg=colour247
-# set -g message-style bg=colour236,fg=colour247
-# set -g pane-active-border-style fg=colour148
-# set -g pane-border-style fg=colour236
-# set -g status-style bg=colour233
-# set -g window-status-activity-style bg=colour233,fg=colour148
-# set -g window-status-style bg=colour233,fg=colour231
-
-# set -g status-left "#[fg=colour22,bg=colour148] [#S] #[fg=colour148,bg=colour233,nobold,nounderscore,noitalics]"
-# set -g status-right '#[fg=colour148,bg=colour233,nobold,nounderscore,noitalics]#[fg=colour22,bg=colour148] %H:%M %d-%b-%y'
-# setw -g window-status-format "#[fg=colour233,bg=colour233,nobold,nounderscore,noitalics]#[default] #I:#W#F #[fg=colour233,bg=colour233,nobold,nounderscore,noitalics]"
-# setw -g window-status-current-format "#[fg=colour233,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour247,bg=colour236] #I:#W#F #[fg=colour236,bg=colour233,nobold,nounderscore,noitalics]"
