--- a/tmux.conf
+++ b/tmux.conf
@@ -38,6 +38,7 @@ set -g @copycat_search_C-i '[[:digit:]]{1,3}\.[[:digit:]]{1,3}\.[[:digit:]]{1,3}
 set -g @continuum-restore 'on'
 
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'catppuccin/tmux'
 # set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
@@ -47,11 +48,18 @@ set -g @plugin 'jbnicolai/tmux-fpp'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'soyuka/tmux-current-pane-hostname'
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @catppuccin_window_tabs_enabled on
 set -g @catppuccin_user "off"
 set -g @catppuccin_host "off"
 set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
 set -g @catppuccin_flavour 'mocha'
+set -g @catppuccin_status_modules_right "application battery host date_time"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_window_default_fill "none"
+set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_number_position "left"
+set -g @catppuccin_window_middle_separator " | "
+set -g @catppuccin_window_current_fill "all"
 
 run '~/.tmux/plugins/tpm/tpm'
