--- a/tmux.conf
+++ b/tmux.conf
@@ -13,7 +13,8 @@ set -sg escape-time 0
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
-#Fix ctrl + any arrow navigation
+
+# Fix ctrl + any arrow navigation
 set-window-option -g xterm-keys on
 
 set -g status-interval 60
@@ -34,32 +35,30 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 set-option -g default-shell /bin/zsh
 
-set -g @copycat_search_C-i '[[:digit:]]{1,3}\.[[:digit:]]{1,3}\.[[:digit:]]{1,3}\.[[:digit:]]{1,3}'
 set -g @continuum-restore 'on'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
-# set -g @plugin 'tmux-plugins/tmux-yank'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-# set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'jbnicolai/tmux-fpp'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'soyuka/tmux-current-pane-hostname'
+# set -g @plugin 'soyuka/tmux-current-pane-hostname'
+set -g @plugin  'git@github.com:Tony-Sol/tmux-current-pane-hostname'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @catppuccin_window_tabs_enabled on
 set -g @catppuccin_user "off"
 set -g @catppuccin_host "off"
 set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
 set -g @catppuccin_flavour 'mocha'
+set -g @catppuccin_host_text '#{?#{pane_ssh_connected},ssh #U@#H,local}'
 set -g @catppuccin_status_modules_right "application battery host date_time"
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_window_default_fill "none"
 set -g @catppuccin_window_right_separator "█ "
 set -g @catppuccin_window_number_position "left"
-set -g @catppuccin_window_middle_separator " | "
+set -g @catppuccin_window_middle_separator "| "
 set -g @catppuccin_window_current_fill "all"
 
 run '~/.tmux/plugins/tpm/tpm'
