put statubar on top in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,7 @@ set -g default-terminal 'tmux-256color'
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 set-option -g history-limit 5000
 set -sg escape-time 0
+set-option -g status-position top
 
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
