--- a/tmux.conf
+++ b/tmux.conf
@@ -38,8 +38,8 @@ set-option -g default-shell /bin/zsh
 
 set -g @continuum-restore 'on'
 
-set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'jbnicolai/tmux-fpp'
@@ -61,5 +61,11 @@ set -g @catppuccin_window_right_separator "█ "
 set -g @catppuccin_window_number_position "left"
 set -g @catppuccin_window_middle_separator "| "
 set -g @catppuccin_window_current_fill "all"
+
+
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
 
 run '~/.tmux/plugins/tpm/tpm'
