--- a/tmux.conf
+++ b/tmux.conf
@@ -5,11 +5,14 @@ bind ` send-prefix
 setw -g monitor-activity on
 set -g visual-activity off
 set -g allow-rename off
-set -g default-terminal 'tmux-256color'
-set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+set -g default-terminal "tmux-256color"
+set -sg terminal-overrides ",*:RGB"
 set-option -g history-limit 5000
 set -sg escape-time 0
 set-option -g status-position top
+set -g pane-active-border-style 'fg=magenta,bg=default'
+set -g pane-border-style 'fg=brightblack,bg=default'
+
 
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
@@ -45,9 +48,11 @@ set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'jbnicolai/tmux-fpp'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'sainnhe/tmux-fzf'
 # set -g @plugin 'soyuka/tmux-current-pane-hostname'
 set -g @plugin  'git@github.com:Tony-Sol/tmux-current-pane-hostname'
 set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @catppuccin_window_tabs_enabled on
 set -g @catppuccin_user "off"
 set -g @catppuccin_host "off"
@@ -55,17 +60,37 @@ set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
 set -g @catppuccin_flavour 'mocha'
 set -g @catppuccin_host_text '#{?#{pane_ssh_connected},ssh #U@#H,local}'
 set -g @catppuccin_status_modules_right "application battery host date_time"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_window_default_fill "none"
-set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_number_position "left"
-set -g @catppuccin_window_middle_separator "| "
-set -g @catppuccin_window_current_fill "all"
-
-
+set -g @catppuccin_window_status_enable "no"
+set -g @catppuccin_window_status_icon_enable "yes"
+setw -g window-status-activity-style none
 set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_icon_window_last "󰖰"
+set -g @catppuccin_icon_window_current "󰖯"
+set -g @catppuccin_icon_window_zoom "󰁌"
+set -g @catppuccin_icon_window_mark "󰃀"
+set -g @catppuccin_icon_window_silent "󰂛"
+set -g @catppuccin_icon_window_activity "󱅫"
+set -g @catppuccin_icon_window_bell "󰂞"
+set -g @catppuccin_status_modules_right "directory cpu battery date_time"
+set -g @catppuccin_status_modules_left "session"
 set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_directory_text "#{b:pane_current_path}"
+set -g @catppuccin_window_separator ""
+set -g @catppuccin_window_default_color "#{thm_blue}" # text color
+set -g @catppuccin_window_default_background "#{thm_gray}"
+set -g @catppuccin_window_default_text "#{b:pane_current_path}" # use "#W" for application instead of directory
+set -g @catppuccin_window_current_color "#{thm_orange}" # text color
+set -g @catppuccin_window_current_background "#{thm_bg}"
+set -g @catppuccin_status_default "on"
+set -g @catppuccin_status_background "theme"
 
 run '~/.tmux/plugins/tpm/tpm'
