add thumbs plugin to tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,12 +7,16 @@ set -g visual-activity off
 set -g allow-rename off
 set -g default-terminal "tmux-256color"
 set -sg terminal-overrides ",*:RGB"
-set-option -g history-limit 5000
-set -sg escape-time 0
-set-option -g status-position top
+set -g history-limit 1000000
+set -g escape-time 0
+set -g detach-on-destroy off
+set -g status-position top
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
+set -g set-clipboard on
 
+set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
+set -g @fzf-url-history-limit '2000'
 
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
@@ -49,7 +53,8 @@ set -g @plugin 'jbnicolai/tmux-fpp'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'sainnhe/tmux-fzf'
-# set -g @plugin 'soyuka/tmux-current-pane-hostname'
+set -g @plugin 'fcsonline/tmux-thumbs'
+
 set -g @plugin  'git@github.com:Tony-Sol/tmux-current-pane-hostname'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
@@ -77,7 +82,7 @@ set -g @catppuccin_icon_window_mark "󰃀"
 set -g @catppuccin_icon_window_silent "󰂛"
 set -g @catppuccin_icon_window_activity "󱅫"
 set -g @catppuccin_icon_window_bell "󰂞"
-set -g @catppuccin_status_modules_right "directory cpu battery date_time"
+set -g @catppuccin_status_modules_right "directory host cpu battery date_time"
 set -g @catppuccin_status_modules_left "session"
 set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator " "
@@ -87,7 +92,7 @@ set -g @catppuccin_directory_text "#{b:pane_current_path}"
 set -g @catppuccin_window_separator ""
 set -g @catppuccin_window_default_color "#{thm_blue}" # text color
 set -g @catppuccin_window_default_background "#{thm_gray}"
-set -g @catppuccin_window_default_text "#{b:pane_current_path}" # use "#W" for application instead of directory
+set -g @catppuccin_window_default_text "#W" # use "#W" for application instead of directory
 set -g @catppuccin_window_current_color "#{thm_orange}" # text color
 set -g @catppuccin_window_current_background "#{thm_bg}"
 set -g @catppuccin_status_default "on"
