--- a/tmux.conf
+++ b/tmux.conf
@@ -54,7 +54,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'fcsonline/tmux-thumbs'
-
 set -g @plugin  'git@github.com:Tony-Sol/tmux-current-pane-hostname'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
@@ -74,7 +73,9 @@ set -g @catppuccin_window_middle_separator " █"
 set -g @catppuccin_window_number_position "right"
 set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
 set -g @catppuccin_icon_window_last "󰖰"
 set -g @catppuccin_icon_window_current "󰖯"
 set -g @catppuccin_icon_window_zoom "󰁌"
@@ -92,7 +93,7 @@ set -g @catppuccin_directory_text "#{b:pane_current_path}"
 set -g @catppuccin_window_separator ""
 set -g @catppuccin_window_default_color "#{thm_blue}" # text color
 set -g @catppuccin_window_default_background "#{thm_gray}"
-set -g @catppuccin_window_default_text "#W" # use "#W" for application instead of directory
+#set -g @catppuccin_window_default_text "#W" # use "#W" for application instead of directory
 set -g @catppuccin_window_current_color "#{thm_orange}" # text color
 set -g @catppuccin_window_current_background "#{thm_bg}"
 set -g @catppuccin_status_default "on"
