--- a/tmux.conf
+++ b/tmux.conf
@@ -53,10 +53,9 @@ set -g @plugin 'jbnicolai/tmux-fpp'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'fcsonline/tmux-thumbs'
+#set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin  'git@github.com:Tony-Sol/tmux-current-pane-hostname'
 set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @catppuccin_window_tabs_enabled on
 set -g @catppuccin_user "off"
 set -g @catppuccin_host "off"
