annoying european keyboard

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 #I preffer a single key prefix. Much better on bad connection
 unbind C-b
 set -g prefix `
+set-option -g prefix2 §
 bind ` send-prefix
 setw -g monitor-activity on
 set -g visual-activity off
