--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,7 @@ set -sg terminal-overrides ",*:RGB"
 set -g escape-time 0
 set -g detach-on-destroy off
 set -g status-position top
+set-option -g history-limit 3000
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
 set -g set-clipboard on
