--- a/tmux.conf
+++ b/tmux.conf
@@ -1,20 +1,19 @@
 #I preffer a single key prefix. Much better on bad connection
-unbind C-b
-set -g prefix `
-set-option -g prefix2 §
 bind ` send-prefix
-setw -g monitor-activity on
-set -g visual-activity off
 set -g allow-rename off
 set -g default-terminal "tmux-256color"
-set -sg terminal-overrides ",*:RGB"
-set -g escape-time 0
 set -g detach-on-destroy off
-set -g status-position top
-set-option -g history-limit 3000
+set -g escape-time 10
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
+set -g prefix `
 set -g set-clipboard on
+set -g status-position top
+set -g visual-activity off
+set -g terminal-overrides ",xterm-256color:Tc"
+set-option -g history-limit 3000
+setw -g monitor-activity on
+unbind C-b
 
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
@@ -24,14 +23,14 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
 # Fix ctrl + any arrow navigation
-set-window-option -g xterm-keys on
+set-window-option -g xterm-keys off
 
 set -g status-interval 60
 setw -g mode-keys vi
 set -g renumber-windows on
 set -g base-index 1
 set -g mouse on
-set -g focus-events on
+set -g focus-events off
 
 #VIM style movements
 bind -r h select-pane -L
@@ -46,59 +45,33 @@ set-option -g default-shell /bin/zsh
 
 set -g @continuum-restore 'on'
 
-set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'tmux-plugins/tmux-urlview'
-set -g @plugin 'jbnicolai/tmux-fpp'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'fcsonline/tmux-thumbs'
-set -g @plugin  'git@github.com:Tony-Sol/tmux-current-pane-hostname'
-set -g @plugin 'tmux-plugins/tmux-battery'
 
-set -g @catppuccin_window_tabs_enabled on
-set -g @catppuccin_user "off"
-set -g @catppuccin_host "off"
-set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
-set -g @catppuccin_flavour 'mocha'
-set -g @catppuccin_host_text '#{?#{pane_ssh_connected},ssh #U@#H,local}'
-set -g @catppuccin_status_modules_right "application battery host date_time"
-set -g @catppuccin_window_status_enable "no"
-set -g @catppuccin_window_status_icon_enable "yes"
-setw -g window-status-activity-style none
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_fill "number"
-#set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
-set -g @catppuccin_window_current_text "#{?#{==:#{pane_current_command},zsh},#{b:pane_current_path},#{pane_current_command}}"
-set -g @catppuccin_window_default_text "#{?#{==:#{pane_current_command},zsh},#{b:pane_current_path},#{pane_current_command}}" # use "#W" for application instead of directory
-set -g @catppuccin_icon_window_last "󰖰"
-set -g @catppuccin_icon_window_current "󰖯"
-set -g @catppuccin_icon_window_zoom "󰁌"
-set -g @catppuccin_icon_window_mark "󰃀"
-set -g @catppuccin_icon_window_silent "󰂛"
-set -g @catppuccin_icon_window_activity "󱅫"
-set -g @catppuccin_icon_window_bell "󰂞"
-set -g @catppuccin_status_modules_right "host battery date_time"
-set -g @catppuccin_status_modules_left "session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_directory_text "#{b:pane_current_path}"
-set -g @catppuccin_window_separator ""
-set -g @catppuccin_window_default_color "#{thm_blue}" # text color
-set -g @catppuccin_window_default_background "#{thm_gray}"
-set -g @catppuccin_window_current_color "#{thm_orange}" # text color
-set -g @catppuccin_window_current_background "#{thm_bg}"
-set -g @catppuccin_status_default "on"
-set -g @catppuccin_status_background "theme"
+# set -g @plugin  'git@github.com:Tony-Sol/tmux-current-pane-hostname'
+set -g @plugin 'soyuka/tmux-current-pane-hostname'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @plugin 'catppuccin/tmux'
+
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "rounded"
+
+set -g status-right-length 100
+set -g status-left-length 120
+set -g status-left ""
+set -gF status-right "#{E:@catppuccin_status_application}#{E:@catppuccin_status_session}#{E:@catppuccin_status_cpu}#{E:@catppuccin_status_date_time}"
+
+
+### https://github.com/catppuccin/tmux
+set -g @catppuccin_window_number_position 'right'
+set -g @catppuccin_window_status 'no'
+set -g @catppuccin_date_time_text '%H:%M'
+set -g @catppuccin_window_text "#W"
+set -g @catppuccin_window_current_text "#W"
 
 run '~/.tmux/plugins/tpm/tpm'
