--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
 set -g prefix `
 set -g set-clipboard on
-set -g status-position top
+set -g status-position bottom
 set -g visual-activity off
 set -g terminal-overrides ",xterm-256color:Tc"
 set-option -g history-limit 3000
