--- a/tmux.conf
+++ b/tmux.conf
@@ -74,4 +74,4 @@ set -g @catppuccin_date_time_text '%H:%M'
 set -g @catppuccin_window_text "#W"
 set -g @catppuccin_window_current_text "#W"
 
-run '/opt/homebrew/opt/tpm/share/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
