fix tmux alerts for kitty

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,7 @@ set -g set-clipboard on
 set -g status-position bottom
 set -g visual-activity off
 set -g terminal-overrides ",xterm-256color:Tc"
+set -g allow-passthrough on
 set-option -g history-limit 3000
 setw -g monitor-activity on
 unbind C-b
